--- a/WebContent/pages/dashboard.xhtml
+++ b/WebContent/pages/dashboard.xhtml
@@ -9,6 +9,7 @@
 	
 	<h:head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<title>Oncorp</title>
 		<link type="text/css" rel="stylesheet" href="#{request.contextPath}/resources/css/geral.css" />
 		<script type="text/javascript" src="#{request.contextPath}/resources/js/funcoes.js"  />
